React now uses whole page

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
   background-color: rgba(0, 255, 170, 0.233);
+  height: 100vh;
+}
+
+h1 {
+  border: 0.15em solid rgb(0, 0, 0);
+  border-radius: 0.45em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
