--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,9 +1,22 @@
-.App {
+.appContainer {
   text-align: center;
   background-color: rgba(0, 255, 170, 0.233);
+
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
+  border: 0.15em solid rgb(0, 0, 0);
+  border-radius: 0.45em;
+}
+
+.scene1 {
+  background-color: lightsalmon;
+}
+
+.scrollControl {
   border: 0.15em solid rgb(0, 0, 0);
   border-radius: 0.45em;
 }
