--- a/src/index.module.css
+++ b/src/index.module.css
@@ -16,3 +16,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.appContainer {
+  text-align: center;
+  background-color: lightslategrey;
+
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
